<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada"
    tools:context="com.silviaalcon.tarean1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000000"
        android:alpha="0.3">
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentTop="true"
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_music"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mus"
            android:textColor="#ffffff"
            android:text="@string/musica"
            />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_marginLeft="190dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mus"
            android:textColor="#ffffff"
            android:text="@string/buscar"
            />

        <Button
            android:id="@+id/btn_..."
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mus"
            android:textColor="#ffffff"
            android:text="..." />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_below="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mus"
            android:text="@string/lista"
            android:textColor="#ffffff"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/pis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mus"
            android:text="@string/pistas"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/alb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_mus"
            android:text="@string/albun"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/three"
        android:layout_below="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="#716d6d">
        </View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/four"
        android:layout_below="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ult"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/five"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:src="@drawable/coverpri"/>
        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:src="@drawable/sg"/>
        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:src="@drawable/tr"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/six"
        android:layout_below="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_bordes"
            android:text="@string/ale"
            android:textColor="#ffffff"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/seven"
        android:layout_below="@+id/six"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/coverpri"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="11:11"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="(Taeyeon)"
                        android:textSize="15sp" />

                    <View
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="#716d6d">
                    </View>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/coverseg"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="Anthem Of The Lonely"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="Nine Lashes"
                        android:textSize="15sp" />

                    <View
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="#716d6d">
                    </View>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/coverter"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="AUD-20170312-WA0006"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="Desconocido"
                        android:textSize="15sp" />
                    <View
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="#716d6d">
                    </View>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_redbor"
                android:textColor="#ffffff"
                android:text="#  A   .   G  H   .   N  Ñ   .   T  U   .   X   Y"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
